# DDTM_demo

./: .dockerignore  .env.example  .gitignore  BUILD.md  DDTM_QAS_原型系统搭建方案.md  DDTM_QAS_论文设计文档.md  DDTM原型系统构建过程.md  Makefile  P0-ISSUES.md  PROJECT_SUMMARY.md  README.md  README_V1.md  docker-compose.yml  experiment-report.py
canonicalizer-go/: go.mod
contracts/: foundry.toml
ddtm_evm/: hardhat.config.js  package.json
ddtm_zkp/: Dockerfile.v1  EXPERIMENT_README.md  experiment_report.py  go.mod  go.sum  iteration1_2.go  multi_node_results.json  multi_node_sim.py  multi_node_v2.py  pi_q.go  run_all.sh
docs/: .implementation-complete-placeholder  ACTUAL_LAST_FILE.md  AFTER_COMPACTION.md  AFTER_EXPLICIT_SUMMARY.md  AFTER_EXPLICIT_SYSTEM_SUMMARY.md  AFTER_STABLE_SUMMARY.md  AFTER_SUMMARY_BREAK.md  AFTER_SUMMARY_RESET_2.md  AFTER_SYSTEM_SUMMARY.md  AFTER_SYSTEM_TOKEN_SUMMARY.md  AFTER_SYSTEM_TOKEN_SUMMARY_2.md  AFTER_SYSTEM_USAGE.md  AFTER_TOKEN_CHECK.md  AFTER_TOKEN_COMPACTION.md  AFTER_TOKEN_COUNT.md  AFTER_TOKEN_STATUS.md  AFTER_TOKEN_SUMMARY.md  AFTER_TOKEN_SUMMARY_5.md  AFTER_TOKEN_SUMMARY_BREAK.md  AFTER_TOKEN_USAGE.md  API.md  ARBITRATION.md  ARCHITECTURE_DECISIONS.md  AUDIT_LOG.md  BUILD_OUTPUTS.md  BUYER_PROTECTION.md  BUYER_VERIFICATION.md  CHANGELOG_V1.md  CI.md  CIRCUIT_VERSIONING.md  CI_SOURCE_OF_TRUTH.md  COMPACTION_RESET.md  CONTEXT_BINDING.md  (+61 more)
tee-evaluator-rust/: Cargo.toml
tee-evaluator-rust/src/: audit.rs  crypto.rs  data.rs  fixed.rs  fixed_array_serde.rs  main.rs  model.rs  utility.rs
tee-evaluator-rust/src/attestation/: mock.rs  mod.rs
(+106 files in other folders)
